# rust-genai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SECURITY.md  deny.toml  llms.txt  release.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  conformance-nightly.yml  release-candidate.yml  release.yml  spec-sync.yml
benches/: sse_parsing.rs
docs/: api-versions.md  auth.md  best-practices.md  compatibility-matrix.md  conformance.md  error-handling.md  getting-started.md  mcp.md  official-sources.md  release.md  retry-timeout.md  spec-sync.md  versioning.md
docs/plans/: 01-docs-refresh.md  02-webhooks-and-client-id.md  03-spec-sync.md  04-model-refresh.md
rust-genai/: Cargo.toml  README.md
rust-genai-macros/: Cargo.toml  README.md
rust-genai-macros/src/: lib.rs
rust-genai-macros/tests/: gemini_tool.rs
rust-genai-types/: Cargo.toml  README.md
rust-genai-types/src/: base64_serde.rs  batches.rs  caches.rs  config.rs  content.rs  documents.rs  enums.rs  file_search_stores.rs  files.rs  grounding.rs  http.rs  interactions.rs  lib.rs  live_music_types.rs  live_types.rs  logprobs.rs  models.rs  operations.rs  response.rs  tokens.rs  tool.rs  tunings.rs  webhooks.rs
rust-genai-types/src/converters/: mod.rs
rust-genai/examples/: README.md  auth_tokens_create.rs  batches_create.rs  batches_list.rs  caches_create.rs  caches_list.rs  chat_basic.rs  chat_history.rs  chat_stream.rs  code_execution_with_image.rs  compute_tokens.rs  computer_use_tools.rs  count_tokens.rs  deep_research_basic.rs  documents_list.rs  embed_content.rs  error_handling.rs  file_search_store_create.rs  file_search_store_upload.rs  files_download.rs  files_list.rs  files_upload_from_path.rs  function_calling_auto.rs  function_response_media.rs  generate_content_basic.rs  generate_content_events.rs  generate_content_image.rs  generate_content_stream.rs  generate_images.rs  generate_json.rs  generate_videos.rs  grounding_citations.rs  interactions_basic.rs  list_models.rs  live_function_calling.rs  live_music_generation.rs  live_native_audio.rs  live_session_basic.rs  live_session_resumption.rs  live_smoke.rs  (+7 more)
rust-genai/examples/files/: README.md
rust-genai/src/: afc.rs  auth.rs  batches.rs  caches.rs  chats.rs  client.rs  computer_use.rs  deep_research.rs  documents.rs  error.rs  file_search_stores.rs  files.rs  http_response.rs  interactions.rs  lib.rs  live.rs  live_music.rs  mcp.rs  model_capabilities.rs  models.rs  operations.rs  sse.rs  test_support.rs  thinking.rs  tokenizer.rs  tokens.rs  tunings.rs  upload.rs  webhooks.rs
rust-genai/src/models/: builders.rs  http.rs  media.rs  parsers.rs  tests.rs
rust-genai/tests/: api_smoke_callable_tools.rs  api_smoke_gemini.rs  api_smoke_vertex.rs  batches_api.rs  caches_api.rs  chats_api.rs  client_http.rs  conformance.rs  documents_api.rs  file_search_stores_api.rs  files_api.rs  http_retry.rs  interactions_api.rs  live_ws.rs  model_capabilities.rs  models_api.rs  operations_api.rs  tokens_api.rs  tunings_api.rs  webhooks_api.rs
rust-genai/tests/conformance/: gemini_files.rs  gemini_models.rs  gemini_streaming.rs  json_generation.rs  retry_policy.rs  support.rs  vertex_guards.rs  vertex_models.rs  vertex_streaming.rs
rust-genai/tests/support/: mod.rs
scripts/: spec_sync.py  spec_sync.sh
spec/: api-versions.md  deprecations.md  manifest.json  openapi3_0.json  spec-diff.md
tests/: integration_test.rs  mock_server.rs
