[workspace]
members = [
    "rust-genai",
    "rust-genai-types",
    "rust-genai-macros",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/rust-genai/rust-genai"
homepage = "https://github.com/rust-genai/rust-genai"
documentation = "https://docs.rs/rust-genai"
authors = ["Rust Gemini SDK Team"]
keywords = ["gemini", "ai", "google", "llm", "api"]
categories = ["api-bindings", "asynchronous"]

[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
http = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
futures-util = "0.3"
base64 = "0.22"
bytes = "1.11"
memchr = "2.7"
mime_guess = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
google-cloud-auth = "1.3"
rmcp = "0.12"
