[package]
name = "rust-genai-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Procedural macros for the Rust Gemini SDK"
readme = "README.md"
documentation = "https://docs.rs/rust-genai-macros"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
rust_genai = { package = "rust-genai", path = "../rust-genai", version = "0.1.0" }
rust-genai-types = { path = "../rust-genai-types", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
