[package]
name = "rust-genai-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Shared types for the Rust Gemini SDK"
readme = "README.md"
documentation = "https://docs.rs/rust-genai-types"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
rmcp = { workspace = true, optional = true }

[features]
default = []
mcp = ["dep:rmcp"]
