[package]
name = "rust-genai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rust-genai"
authors.workspace = true
description = "Rust SDK for the Google Gemini API and Vertex AI"
readme = "README.md"
keywords.workspace = true
categories.workspace = true
exclude = ["examples/files/output/**", "**/.DS_Store"]

[dependencies]
rust-genai-types = { path = "../rust-genai-types", version = "0.1.0" }
tokio = { workspace = true }
reqwest = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
memchr = { workspace = true }
mime_guess = { workspace = true }
tokio-tungstenite = { workspace = true }
google-cloud-auth = { workspace = true }
kitoken = { version = "0.10", optional = true, features = ["convert-sentencepiece"] }
sha2 = { version = "0.10", optional = true }
rmcp = { workspace = true, optional = true, features = ["client", "transport-child-process"] }

[features]
default = []
kitoken = ["dep:kitoken", "dep:sha2"]
mcp = ["dep:rmcp", "rust-genai-types/mcp"]

[dev-dependencies]
wiremock = "0.6"
criterion = "0.8"
